<resources>
    <string name="app_name">Area Pass</string>

    <string name="hint_identifier">Email or username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_promo_code">Promo code</string>
    <string name="hint_new_password">New password</string>

    <string name="button_sign_in">Sign In</string>
    <string name="button_create_account">Create account</string>
    <string name="button_forgot_password">Forgot password</string>
    <string name="button_use_promo_code">Use promo code</string>
    <string name="button_submit">Submit</string>
    <string name="button_reset">Reset</string>
    <string name="button_ok">Okay</string>
    <string name="button_dashboard_areas">Passes</string>
    <string name="button_dashboard_account">Account details</string>
    <string name="button_sign_out">Sign out</string>
    <string name="button_change_password">Change password</string>
    <string name="button_save">Keep changes</string>
    <string name="button_subscription">Subscription</string>
    <string name="button_change">Change</string>

    <string name="label_dashboard_username">%s</string>
    <string name="label_dashboard_trial">Trial remains: %s</string>
    <string name="label_dashboard_about">Lüsua © 2019\nv.%s</string>
    <string name="label_dashboard_passes_valid_thru">valid thru\n%s</string>
    <plurals name="label_month">
        <item quantity="one">mo.</item>
        <item quantity="other">mos.</item>
    </plurals>

    <string name="title_account">Account</string>
    <string name="title_change_password">Change password</string>
</resources>
