<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="lus.areapass.auth.viewmodels.CreateAccountViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@drawable/form_bgd_auth">

        <ImageView
            android:id="@+id/logo"
            style="@style/Logo"
            app:layout_constraintBottom_toTopOf="@id/inputForm"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/inputForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/submit"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <EditText
                style="@style/InputField.Auth"
                android:hint="@string/hint_first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.firstName}"
                tools:ignore="Autofill" />

            <EditText
                style="@style/InputField.Auth"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.lastName}"
                tools:ignore="Autofill" />

            <EditText
                style="@style/InputField.Auth"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.email}"
                tools:ignore="Autofill" />

            <EditText
                style="@style/InputField.Auth"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.username}"
                tools:ignore="Autofill" />

            <EditText
                style="@style/InputField.Auth"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_password"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.password}"
                tools:ignore="Autofill" />

            <EditText
                style="@style/InputField.Auth"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="@={viewModel.confirmPassword}"
                tools:ignore="Autofill" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="@color/yellow"
                android:checked="@={viewModel.usePromoCode}"
                android:text="@string/button_use_promo_code"
                android:textColor="@android:color/white" />

            <EditText
                style="@style/InputField.Auth"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_promo_code"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="@={viewModel.promoCode}"
                bind:visible="@{viewModel.usePromoCode}"
                tools:ignore="Autofill" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@color/yellow"
            android:onClick="@{viewModel.onSubmit}"
            android:text="@string/button_submit"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputForm"
            app:layout_constraintVertical_chainStyle="spread_inside" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>