<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="lus.areapass.auth.viewmodels.SignInViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@drawable/upd_form_bgd_auth">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toTopOf="@id/form"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView style="@style/Logo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="@id/endGuideline"
            app:layout_constraintStart_toStartOf="@id/startGuideline"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <EditText
                style="@style/InputField.Auth"
                android:hint="@string/hint_identifier"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.identifier}"
                tools:ignore="Autofill" />

            <EditText
                style="@style/InputField.Auth"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                tools:ignore="Autofill" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/upd_button_bgd_signin"
                android:onClick="@{viewModel.onSignIn}"
                android:text="@string/button_sign_in"
                android:textAllCaps="false"
                android:textColor="@color/dark_blue" />

            <TextView
                style="@style/Label.Auth"
                android:layout_width="150dp"
                android:layout_marginTop="15dp"
                android:onClick="@{viewModel.onCreateAccount}"
                android:text="@string/button_create_account" />

            <TextView
                style="@style/Label.Auth"
                android:layout_width="150dp"
                android:layout_marginTop="10dp"
                android:onClick="@{viewModel.onResetPassword}"
                android:text="@string/button_forgot_password" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>